add LogisticRegression page

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -8,6 +8,7 @@ website:
       - href: index.qmd
         text: Home
       - KNN_and_XGB.ipynb
+      - LogisticRegression.ipynb
       - about.qmd
 
 format:
