update font and themes

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -13,9 +13,12 @@ website:
 
 format:
   html:
-    theme: solar
+    theme:
+      dark: solar
+      light: flatly
     css: styles.css
     toc: true
+    mainfont: serif
 
 
 
